Add window menu bar visibility setting to VS Code configuration

--- a/Code/.config/Code/User/settings.json
+++ b/Code/.config/Code/User/settings.json
@@ -261,5 +261,6 @@
   "vscode-neovim.neovimInitVimPaths.linux": "~/.config/nvim/init.lua",
   "editor.renderWhitespace": "none",
   "terminal.integrated.fontFamily": "monospace",
-  "git.ignoreRebaseWarning": true
+"git.ignoreRebaseWarning": true,
+"window.menuBarVisibility": "compact"
   }
