--- a/stow/waybar/.config/waybar/modules/theme-switch.jsonc
+++ b/stow/waybar/.config/waybar/modules/theme-switch.jsonc
@@ -1,6 +1,6 @@
 {
   "custom/theme": {
-    "format": "🎨",
+    "format": " {0} ",
     "tooltip-format": "Left: dark (rose-pine-dark)\nRight: light (rose-pine-light)",
     "on-click": "omarchy-theme-set rose-pine-dark; pkill -USR2 waybar",
     "on-click-right": "omarchy-theme-set rose-pine-light; pkill -USR2 waybar",
