Add keybindings for window resizing in Hyprland configuration

--- a/stow/hypr/.config/hypr/hyprland.conf
+++ b/stow/hypr/.config/hypr/hyprland.conf
@@ -31,3 +31,9 @@ exec-once = setsid -f hyprsunset
 
 # Start the daily 17:00 scheduler (detached from Hyprland)
 exec-once = setsid -f ~/.config/hypr/nightlight-at-17.sh
+
+# Extras keybinds
+bind = SUPER CTRL, l, resizeactive, 30 0
+bind = SUPER CTRL, h, resizeactive, -30 0
+bind = SUPER CTRL, k, resizeactive, 0 -30
+bind = SUPER CTRL, j, resizeactive, 0 30
