--- a/stow/hypr/.config/hypr/input.conf
+++ b/stow/hypr/.config/hypr/input.conf
@@ -3,7 +3,7 @@
 input {
   # Use multiple keyboard layouts and switch between them with Left Alt + Right Alt
   # kb_layout = us,dk,eu
-  kb_options = compose:caps # ,grp:shifts_toggle
+  kb_options = compose:caps # ,grp:alts_toggle
 
   # Change speed of keyboard repeat
   repeat_rate = 40
@@ -13,7 +13,7 @@ input {
   numlock_by_default = true
 
   # Increase sensitivity for mouse/trackpad (default: 0)
-  # sensitivity = 0.35
+  sensitivity = -0.8
 
   touchpad {
     # Use natural (inverse) scrolling
