Refactor Hyprland configuration: update bindings and remove unused environment variables

--- a/stow/hypr/.config/hypr/hyprland.conf
+++ b/stow/hypr/.config/hypr/hyprland.conf
@@ -3,10 +3,11 @@
 # Use defaults Omarchy defaults (but don't edit these directly!)
 source = ~/.local/share/omarchy/default/hypr/autostart.conf
 source = ~/.local/share/omarchy/default/hypr/bindings/media.conf
-source = ~/.local/share/omarchy/default/hypr/bindings/tiling.conf
+source = ~/.local/share/omarchy/default/hypr/bindings/clipboard.conf
+source = ~/.local/share/omarchy/default/hypr/bindings/tiling-v2.conf
 source = ~/.local/share/omarchy/default/hypr/bindings/utilities.conf
-source = ~/.local/share/omarchy/default/hypr/envs.conf
 source = ~/.local/share/omarchy/default/hypr/looknfeel.conf
+source = ~/.local/share/omarchy/default/hypr/envs.conf
 source = ~/.local/share/omarchy/default/hypr/input.conf
 source = ~/.local/share/omarchy/default/hypr/windows.conf
 source = ~/.config/omarchy/current/theme/hyprland.conf
@@ -15,25 +16,8 @@ source = ~/.config/omarchy/current/theme/hyprland.conf
 source = ~/.config/hypr/monitors.conf
 source = ~/.config/hypr/input.conf
 source = ~/.config/hypr/bindings.conf
-source = ~/.config/hypr/envs.conf
 source = ~/.config/hypr/looknfeel.conf
 source = ~/.config/hypr/autostart.conf
 
-# NVIDIA environment variables
-env = NVD_BACKEND,direct
-env = LIBVA_DRIVER_NAME,nvidia
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-
-# TODO: FIX the auto sunset exec
-# Sunset auto excec
-# Start hyprsunset once (harmless if already running)
-exec-once = setsid -f hyprsunset
-
-# Start the daily 17:00 scheduler (detached from Hyprland)
-exec-once = setsid -f ~/.config/hypr/nightlight-at-17.sh
-
-# Extras keybinds
-bind = SUPER CTRL, l, resizeactive, 30 0
-bind = SUPER CTRL, h, resizeactive, -30 0
-bind = SUPER CTRL, k, resizeactive, 0 -30
-bind = SUPER CTRL, j, resizeactive, 0 30
+# Add any other personal Hyprland configuration below
+# windowrule = workspace 5, class:qemu
