--- a/config.yaml
+++ b/config.yaml
@@ -5,8 +5,9 @@ stow:
   - hypr
   - starship
   - ghostty
-  - code
+  - Code
   - branding
+  - walker
 
 packages:
   - stow
@@ -17,14 +18,6 @@ packages:
 repos:
   - dest: ~/.local/share/zinit
     url: https://github.com/zdharma-continuum/zinit.git
-  - dest: ~/.oh-my-zsh/custom/plugins/zsh-autosuggestions
-    url: https://github.com/zsh-users/zsh-autosuggestions.git
-  - dest: ~/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting
-    url: https://github.com/zsh-users/zsh-syntax-highlighting.git
-  - dest: ~/.oh-my-zsh/custom/plugins/zsh-vi-mode
-    url: https://github.com/jeffreytse/zsh-vi-mode.git
-  - dest: ~/.oh-my-zsh/custom/plugins/zoxide
-    url: https://github.com/ajeetdsouza/zoxide.git
 
 post:
   - "chsh -s $(command -v zsh) $USER || true"
