--- a/stow/hypr/.config/hypr/hyprland.conf
+++ b/stow/hypr/.config/hypr/hyprland.conf
@@ -1,6 +1,6 @@
 # Learn how to configure Hyprland: https://wiki.hyprland.org/Configuring/
 
-# Use defaults Omarchy defaults (but don't edit these directly!)
+# Use Omarchy defaults (but don't edit these directly!)
 source = ~/.local/share/omarchy/default/hypr/autostart.conf
 source = ~/.local/share/omarchy/default/hypr/bindings/media.conf
 source = ~/.local/share/omarchy/default/hypr/bindings/clipboard.conf
